Fixed colors for `ScrollbarTrack` and `directionIndicators`

--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -388,8 +388,8 @@ $sand-tablayout-tab-horizontal-selected-border-color: $sand-selected-color;
 // ---------------------------------------
 $sand-scrollbar-track-bg-color: rgba(var(--sand-scrollbar-track-bg-color-rgb, 55, 58, 65), 50%);
 $sand-scrollbar-thumb-bg-color: rgba(var(--sand-scrollbar-thumb-bg-color-rgb, 230, 230, 230), 60%);
-$sand-scrollbar-thumb-focus-bg-color: $sand-focus-bg-color;
-$sand-scrollbar-thumb-focus-direction-indicator-color: rgba($sand-component-focus-text-color, 40%); // Reference: conversion rgb with custom properties to rgba
+$sand-scrollbar-thumb-focus-bg-color: $sand-focus-bg-color-rgb;
+$sand-scrollbar-thumb-focus-direction-indicator-color: rgba(76, 80, 89, 40%); // Reference: conversion rgb with custom properties to rgba "rgba($sand-component-focus-text-color, 40%);"
 $sand-scrollbar-thumb-focus-box-shadow-color: $sand-shadow-color;
 
 // Scroller
